--- a/index.html
+++ b/index.html
@@ -195,23 +195,23 @@ and the administrator will contact you if we need any extra information.</h4>
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>8:00 AM</td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td>9:45 AM</td>  <td>Break</td> </tr>
+      <tr> <td>1:00 PM</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>3:00 PM</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>8:00 AM</td>  <td>Programming in MATLAB</td> </tr>
+      <tr> <td>8:00 AM</td>  <td>Programming in Python</td> </tr>
+      <tr> <td>8:00 AM</td>  <td>Programming in R</td> </tr>
+      <tr> <td>9:45 AM</td>  <td>Break</td> </tr>
+      <tr> <td>1:00 PM</td>  <td>Programming in MATLAB</td> </tr>
+      <tr> <td>1:00 PM</td>  <td>Programming in Python</td> </tr>
+      <tr> <td>1:00 PM</td>  <td>Programming in R</td> </tr>
+      <tr> <td>3:00 PM</td>  <td>Wrap-up</td> </tr>
     </table>
   </div>
 </div>
