Remove template wording and reference codelab.boisestate.edu

--- a/index.html
+++ b/index.html
@@ -47,11 +47,6 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
-<h4>This is the workshop template.  Use it to create your own website.
-Delete these lines and please fill in 
-<a href="{{site.amy_site}}/submit">this self-organized workshop form</a>
-and the administrator will contact you if we need any extra information.</h4>
-
 <h2 id="general">General Information</h2>
 
 <!--
@@ -376,6 +371,11 @@ and the administrator will contact you if we need any extra information.</h4>
     tasks more quickly.
   </p>
 
+  <p>
+    The preferred method of installation (if bash is not already installed) 
+    is to use a the web interface at <a href="codelab.boisestate.edu">
+  </p>
+  
   <div class="row">
     <div class="col-md-4">
       <h4 id="shell-windows">Windows</h4>
@@ -480,6 +480,11 @@ and the administrator will contact you if we need any extra information.</h4>
     for keeping your email address private</a> provided at GitHub.
   </p>
 
+  <p>
+    The preferred method of installation (if bash is not already installed) 
+    is to use a the web interface at <a href="codelab.boisestate.edu">
+  </p>
+  
   <div class="row">
     <div class="col-md-4">
       <h4 id="git-windows">Windows</h4>
