Break -> Adjourn for research...

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>8:00 AM</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>9:45 AM</td>  <td>Break</td> </tr>
+      <tr> <td>9:45 AM</td>  <td>Adjourn for Research Computing Days events</td> </tr>
       <tr> <td>1:00 PM</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>3:00 PM</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>3:00 PM</td>  <td>Adjourn for Research Computing Days events</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -202,11 +202,11 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       <tr> <td>8:00 AM</td>  <td>Programming in MATLAB</td> </tr>
       <tr> <td>8:00 AM</td>  <td>Programming in Python</td> </tr>
       <tr> <td>8:00 AM</td>  <td>Programming in R</td> </tr>
-      <tr> <td>9:45 AM</td>  <td>Break</td> </tr>
+      <tr> <td>9:45 AM</td>  <td>Adjourn for Research Computing Days events</td> </tr>
       <tr> <td>1:00 PM</td>  <td>Programming in MATLAB</td> </tr>
       <tr> <td>1:00 PM</td>  <td>Programming in Python</td> </tr>
       <tr> <td>1:00 PM</td>  <td>Programming in R</td> </tr>
-      <tr> <td>3:00 PM</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>3:00 PM</td>  <td>Adjourn for Research Computing Days events</td> </tr>
     </table>
   </div>
 </div>
