One reference to codelab

--- a/index.html
+++ b/index.html
@@ -363,17 +363,16 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <a href = "{{site.swc_github}}/workshop-template/wiki/Configuration-Problems-and-Solutions">Configuration Problems and Solutions wiki page</a>.
 </p>
 
+<p>
+  bash, git, and python for workshop participation: Navigate your browser to codelab.boisestate.edu
+</p>
+
 <div id="shell"> <!-- Start of 'shell' section. -->
   <h3>The Bash Shell</h3>
 
   <p>
     Bash is a commonly-used shell that gives you the power to do simple
     tasks more quickly.
-  </p>
-
-  <p>
-    The preferred method of installation (if bash is not already installed) 
-    is to use a the web interface at <a href="codelab.boisestate.edu">
   </p>
   
   <div class="row">
@@ -478,11 +477,6 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     example, you may want to review these
     <a href="https://help.github.com/articles/keeping-your-email-address-private/">instructions
     for keeping your email address private</a> provided at GitHub.
-  </p>
-
-  <p>
-    The preferred method of installation (if bash is not already installed) 
-    is to use a the web interface at <a href="codelab.boisestate.edu">
   </p>
   
   <div class="row">
