Add emphasis, href

--- a/index.html
+++ b/index.html
@@ -364,7 +364,9 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </p>
 
 <p>
-  bash, git, and python for workshop participation: Navigate your browser to codelab.boisestate.edu
+  <b>
+   For the bash, git, and python for workshop participants: Navigate your browser to <a href="codelab.boisestate.edu"/>
+  </b>
 </p>
 
 <div id="shell"> <!-- Start of 'shell' section. -->
