--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 
 <p>
   <b>
-   For the bash, git, and python for workshop participants: Navigate your browser to <a href="codelab.boisestate.edu"/>
+   For the bash, git, and python for workshop participants: Navigate your browser to <a href="codelab.boisestate.edu">codelab.boisestate.edu</a>
   </b>
 </p>
 
