--- a/index.html
+++ b/index.html
@@ -727,6 +727,10 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     <a href="https://oit.boisestate.edu/software/mathematical-and-statistical-software/">Help Desk</a>
     site for more information.  If you are not affiliated with BSU, you 
     expected to have MATLAB installed ahead of time.
+    
+    <em>If you don’t have an account, create one using your Boise State University email address.</em>
+    
+    MATLAB can also be accessed <a href="https://www.mathworks.com/products/matlab-online.html">online.</a>
   </p>
 </div> <!-- End of 'MATLAB' section. -->
 
