Use a list for last changes.

--- a/index.html
+++ b/index.html
@@ -728,9 +728,12 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     site for more information.  If you are not affiliated with BSU, you 
     expected to have MATLAB installed ahead of time.
     
-    <em>If you don’t have an account, create one using your Boise State University email address.</em>
-    
-    MATLAB can also be accessed <a href="https://www.mathworks.com/products/matlab-online.html">online.</a>
+  <p>
+    A few notes:
+  <ul>
+    <li>If you don’t have an account, create one using your Boise State University email address.</li>
+    <li>MATLAB can be accessed <a href="https://www.mathworks.com/products/matlab-online.html">online.</a></li>
+  </ul>
   </p>
 </div> <!-- End of 'MATLAB' section. -->
 
