temporarily redirect to 2018

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ etherpad:             # optional: URL for the workshop Etherpad if there is one
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
+<!-- We sent out the wrong link for 2018, redirect to that page -->
+<meta http-equiv="refresh" content="0; url=https://bsurc.github.io/2018-03-15-rc-days/">
+<link rel="canonical" href="https://bsurc.github.io/2018-03-15-rc-days/" />
+
 <!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
 
 <!--
